# swagger.yml
@@ -271,6 +271,19 @@ paths:
             schema:
               $ref: '#/components/schemas/FavoriteRequest'
       responses:
+        200:
+          description: successful operation (already created)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Favorite'
+              example:
+                "id": 10,
+                "identifier": "1123121"
+                "utility":
+                  "id": 1
+                  "name": "Aguas Andinas"
+                  "identifier": "NRO CUENTA, CON DIGITO VERIFICADOR"
         201:
           description: successful operation
           content:
@@ -284,6 +297,10 @@ paths:
                   "id": 1
                   "name": "Aguas Andinas"
                   "identifier": "NRO CUENTA, CON DIGITO VERIFICADOR"
+        404:
+          description: utility not found
+        409:
+          description: favorites limit reached
 
   /v1/utility-payments/favorites/{id}:
     delete:
